Fix text alignment of call to actions

--- a/styles/base.css
+++ b/styles/base.css
@@ -892,6 +892,9 @@ form#contactForm {
   /* ######### 10a-iv. CTA summaries, Large screen rules ######### */
   .cta {
     min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .cta1 {
